--- a/config/database.yml
+++ b/config/database.yml
@@ -82,6 +82,7 @@ test:
 #
 production:
   <<: *default
+  url: <%= ENV["DATABASE_URL"] %>
   database: blog_app_production
   username: blog_app
   password: <%= ENV["BLOG_APP_DATABASE_PASSWORD"] %>
